***********************************************************
***********| Version 3.2.1 - Released 2015-04-09 |*********
***********************************************************

-- fixed missing delivery cost
-- fixed empty basket items (wrapping, delivery, tsprotection)
-- added default item oxgiftcard
-- added customer number in PAYMENT REQUEST
-- fixed wrong discount tax calculation

***********************************************************
***********| Version 3.2.0 - Released 2015-02-19 |*********
***********************************************************
-- compatibility with AT (CH ready) with different credentials via PR
-- support of OXID 4.9.x while retaining support of OXID 4.7.x and 4.8.x
-- bundled PI und PR
-- simplified directory structure
-- removed customer and payment block at payment changes
-- fixed elv bank owner bug in case of latin1 db setting
-- fixed bug in delivery address

***********************************************************
***********| Version 3.1.4 - Released 2014-10-29 |*********
***********************************************************
-- new RatePAY Gateway URL

***********************************************************
***********| Version 3.1.3 - Released 2014-05-20 |*********
***********************************************************
-- fixed bug in positive voucher price

***********************************************************
***********| Version 3.1.2 - Released 2014-05-02 |*********
***********************************************************
-- fixed sandbox changes from 3.1.0
-- extended Whitelabel mode
-- removed agreement box (invoice/installment); not needed anymore

***********************************************************
***********| Version 3.1.1 - Released 2014-02-06 |*********
***********************************************************
-- IBAN validation without JS

***********************************************************
***********| Version 3.1.0 - Released 2014-01-31 |*********