@@ -6,8 +6,8 @@ RatePAY GmbH - OXID Payment Module
 |Author | `Aarne Welschlau`
 |Prefix | `pi`
 |Shop Version | `CE` `4.7.x-4.9.x`
-|Version | `3.2.1`
+|Version | `3.2.2`
 |Link | `http://www.ratepay.com`
 |Mail | `integration@ratepay.com`
-|Description | `fixed default basket items. added customer number in PR`
+|Description | `bugfixes: <1000 & max limit`
 |Installation | `see separate installation manual`
