@@ -1,4 +1,11 @@
 ***********************************************************
+***********| Version 3.2.2 - Released 2015-06-30 |*********
+***********************************************************
+
+-- fixed bug in case of item prices > 1000
+-- fixed bug in validation of max limit
+
+***********************************************************
 ***********| Version 3.2.1 - Released 2015-04-09 |*********
 ***********************************************************
 
